--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css"
     />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>Full Stack Engineer | Afara Seun</title>
   </head>
   <body>
     <noscript>
