--- a/public/index.html
+++ b/public/index.html
@@ -1,26 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-
-    <link
-      rel="stylesheet"
-      href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css"
-    />
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
-    <title>Full Stack Engineer | Afara Seun</title>
-  </head>
-  <body>
-    <noscript>
-      <strong
-        >We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work
-        properly without JavaScript enabled. Please enable it to
-        continue.</strong
-      >
-    </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
-</html>
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css"><link rel="icon" href="/favicon.ico"><title>Full Stack Engineer | Afara Seun</title><link href="/js/chunk-16d3efeb.26f324fb.js" rel="prefetch"><link href="/js/chunk-49e91d07.20bd227c.js" rel="prefetch"><link href="/js/chunk-4eb2f975.4f973b83.js" rel="prefetch"><link href="/js/chunk-4f8eba56.175ecbd2.js" rel="prefetch"><link href="/css/app.c6fc6768.css" rel="preload" as="style"><link href="/css/chunk-vendors.d9764759.css" rel="preload" as="style"><link href="/js/app.889a6b46.js" rel="preload" as="script"><link href="/js/chunk-vendors.e9615cb0.js" rel="preload" as="script"><link href="/css/chunk-vendors.d9764759.css" rel="stylesheet"><link href="/css/app.c6fc6768.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but afaraseun doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div><script src="/js/chunk-vendors.e9615cb0.js"></script><script src="/js/app.889a6b46.js"></script></body></html>
